Quite controversial change of adding target=_blank on each external link. Should be decided by each user, but as a lot of people browsing this website are not tech-savvy, I prefer to ease their navigation

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
         <div class="my-3">
           <div class="h4">Cérémonie civile</div>
           <ul>
-            <li><i class="text-muted fas fa-map-marker-alt"></i><a href="https://www.google.com/maps/place/City+Hall/@46.3238382,-0.4648161,15z/data=!4m5!3m4!1s0x0:0x3d25479ae0e8605a!8m2!3d46.3238382!4d-0.4648161" target="_blank"><span class="pl-2 text-muted">Mairie de Niort, 1 Place Martin Bastard, 79000 Niort, France</span></a></li>
+            <li><i class="text-muted fas fa-map-marker-alt"></i><a target="_blank" href="https://www.google.com/maps/place/City+Hall/@46.3238382,-0.4648161,15z/data=!4m5!3m4!1s0x0:0x3d25479ae0e8605a!8m2!3d46.3238382!4d-0.4648161" target="_blank"><span class="pl-2 text-muted">Mairie de Niort, 1 Place Martin Bastard, 79000 Niort, France</span></a></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">27 juillet 2019, début d'après-midi, heure à confirmer</span></li>
           </ul>
           <p>La cérémonie civile se déroulera à la mairie de Niort suivie d'une courte séance photo devant la mairie, les Halles et le Donjon de Niort.
@@ -122,7 +122,7 @@
         <div class="my-3">
           <div class="h4">Cérémonie laïque, vin d'honneur et dîner</div>
           <ul>
-            <li><i class="text-muted fas fa-map-marker-alt "></i><a href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
+            <li><i class="text-muted fas fa-map-marker-alt "></i><a target="_blank" href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">27 juillet 2019, milieu d'après-midi, heure à confirmer</span></li>
           </ul>
           <p>Une cérémonie laïque se déroulera au domaine de La Gravette suivie du vin d'honneur, du dîner et de la soirée sur le dancefloor!
@@ -138,7 +138,7 @@
         <div class="my-3">
           <div class="h4">Brunch</div>
           <ul>
-            <li><i class="text-muted fas fa-map-marker-alt "></i><a href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
+            <li><i class="text-muted fas fa-map-marker-alt "></i><a target="_blank" href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
             <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">28 juillet 2019, 13h00</span></li>
           </ul>
           <p>Un brunch se déroulera le dimanche au domaine de la Gravette pour se remettre de nos émotions...</p>
@@ -352,24 +352,24 @@
                 <img src="images/icon_car.png"/>
               </div>
               <p>En location, de La Rochelle: 
-                  <a href="https://www.rentalcars.com/fr/">Rentalcars.com</a>
+                  <a target="_blank" href="https://www.rentalcars.com/fr/">Rentalcars.com</a>
               </p>
               <p>
                   A côté de la gare:
-                  <a href="https://www.europcar-atlantique.fr/agences/la-rochelle">Europcar</a>,
-                  <a href="https://www.hertz.fr/rentacar/location#results">Hertz</a>,
-                  <a href="https://www.sixt.fr/location-voiture/france/la-rochelle/la-rochelle-gare?xaid=7494&c1=FR&c2=la-rochelle&c3=sixt-la-rochelle-gare">Sixt</a>
+                  <a target="_blank" href="https://www.europcar-atlantique.fr/agences/la-rochelle">Europcar</a>,
+                  <a target="_blank" href="https://www.hertz.fr/rentacar/location#results">Hertz</a>,
+                  <a target="_blank" href="https://www.sixt.fr/location-voiture/france/la-rochelle/la-rochelle-gare?xaid=7494&c1=FR&c2=la-rochelle&c3=sixt-la-rochelle-gare">Sixt</a>
                 </p>
                 <p>
                   A côté de l'aéroport:
-                  <a href="https://www.europcar-atlantique.fr/agences/la-rochelle-aeroport">Europcar</a>,
-                  <a href="https://www.hertz.fr/rentacar/location#results">Hertz</a>,
-                  <a href="https://www.sixt.fr/location-voiture/france/la-rochelle/la-rochelle-aeroport?xaid=7494&c1=FR&c2=la-rochelle&c3=sixt-la-rochelle-aeroport">Sixt</a>, 
+                  <a target="_blank" href="https://www.europcar-atlantique.fr/agences/la-rochelle-aeroport">Europcar</a>,
+                  <a target="_blank" href="https://www.hertz.fr/rentacar/location#results">Hertz</a>,
+                  <a target="_blank" href="https://www.sixt.fr/location-voiture/france/la-rochelle/la-rochelle-aeroport?xaid=7494&c1=FR&c2=la-rochelle&c3=sixt-la-rochelle-aeroport">Sixt</a>, 
                 </p>
                 <p>
                   De Niort: 
-                  <a href="https://www.rentalcars.com/fr/3">Rentalcars.com</a>
-                  <a href="https://www.europcar-atlantique.fr/agences/niort">Europcar</a>
+                  <a target="_blank" href="https://www.rentalcars.com/fr/3">Rentalcars.com</a>
+                  <a target="_blank" href="https://www.europcar-atlantique.fr/agences/niort">Europcar</a>
                 </p>
               </p>   
             </div>
@@ -381,30 +381,30 @@
             <div class="col-md-4">
               <h2>Gîtes</h2>
               <ul>
-                <li><a href="http://www.motteaubert.com/fr/gites/gites-3.html">La Motte Aubert</a></li>
-                <li><a href="https://www.lelogisdevallans.com/">Logis de Vallans</a></li>
-                <li><a href="http://www.simply-france.co.uk/tournesols/index.html">Maison des tournesols</a></li>
-                <li><a href="https://www.chateaulabone.fr/">Chateau la Bone</a></li>
-                <li><a href="http://www.gite-les-frenes.com/">Gîte les Frênes</a></li>
-                <li><a href="https://www.booking.com/hotel/fr/gite-sud-deux-sevres.en-gb.html">Gîte Sud Deux Sèvres</a></li>
+                <li><a target="_blank" href="http://www.motteaubert.com/fr/gites/gites-3.html">La Motte Aubert</a></li>
+                <li><a target="_blank" href="https://www.lelogisdevallans.com/">Logis de Vallans</a></li>
+                <li><a target="_blank" href="http://www.simply-france.co.uk/tournesols/index.html">Maison des tournesols</a></li>
+                <li><a target="_blank" href="https://www.chateaulabone.fr/">Chateau la Bone</a></li>
+                <li><a target="_blank" href="http://www.gite-les-frenes.com/">Gîte les Frênes</a></li>
+                <li><a target="_blank" href="https://www.booking.com/hotel/fr/gite-sud-deux-sevres.en-gb.html">Gîte Sud Deux Sèvres</a></li>
               </ul>
             </div>
             <div class="col-md-4">
                 <h2>Airbnb</h2>
                 <ul>
-                    <li><a href="https://www.airbnb.co.uk/rooms/7961355?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambres à la campagne (4 disponibles) avec lit 2P</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/13651697?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Maison à la campagne</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/17036112?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">La Cabane de Vendredi avec terrasse sur pilotis</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/3961259?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Gite les frênes, entre terre et mer</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/16720190?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Close house Niort swamp poitevin+piscine sud79</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/23801154?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Grande chambre (42m²) au vert</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/22173624?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre tres calme</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/26889328?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Gîte proche de La Rochelle et du Marais Poitevin</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/15983471?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Maison de campagne et pizzeria au calme</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/20211696?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">La ferme de Contremarche</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/9203375?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre 1 ..... salle d eau à l italienne</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/11887668?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre 2 ...</a></li>
-                    <li><a href="https://www.airbnb.co.uk/rooms/20028548?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Calme champêtre</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/7961355?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambres à la campagne (4 disponibles) avec lit 2P</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/13651697?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Maison à la campagne</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/17036112?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">La Cabane de Vendredi avec terrasse sur pilotis</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/3961259?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Gite les frênes, entre terre et mer</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/16720190?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Close house Niort swamp poitevin+piscine sud79</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/23801154?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Grande chambre (42m²) au vert</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/22173624?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre tres calme</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/26889328?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Gîte proche de La Rochelle et du Marais Poitevin</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/15983471?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Maison de campagne et pizzeria au calme</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/20211696?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">La ferme de Contremarche</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/9203375?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre 1 ..... salle d eau à l italienne</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/11887668?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Chambre 2 ...</a></li>
+                    <li><a target="_blank" href="https://www.airbnb.co.uk/rooms/20028548?location=Beauvoir%20sur%20Niort&s=ge7e_6M0">Calme champêtre</a></li>
                 </ul>
             </div>
           </div>
@@ -413,43 +413,43 @@
           <h2 class="h1 text-center pb-3 ww-title">Aux alentours</h2>
           <div class="row what-to-visit">
             <div class="col-md-3 visit-place">
-              <h3><a href="https://www.larochelle-tourisme.com/">La Rochelle</a></h3>
+              <h3><a target="_blank" href="https://www.larochelle-tourisme.com/">La Rochelle</a></h3>
               <img class="featured" src="images/tourisme_la_rochelle.jpg"/>
               <span class="distance">(voiture: 50 min de Niort)</span>
-              <p class="first-line-description">La ville de naissance d'Aurélie, le port avec ses deux tours reste incontournables et ces petites rues marchandes sont pleines de charme. Passez-y au moins un après-midi à flâner dans les rues. Faites un détour par le meilleur glacier de tous les temps, <a href="https://www.ernest-le-glacier.com/">Ernest le glacier</a> !</p>
+              <p class="first-line-description">La ville de naissance d'Aurélie, le port avec ses deux tours reste incontournables et ces petites rues marchandes sont pleines de charme. Passez-y au moins un après-midi à flâner dans les rues. Faites un détour par le meilleur glacier de tous les temps, <a target="_blank" href="https://www.ernest-le-glacier.com/">Ernest le glacier</a> !</p>
             </div>  
             <div class="col-md-3 visit-place">
-              <h3><a href="https://www.iledere.com/pratique">Île de Ré</a></h3>
+              <h3><a target="_blank" href="https://www.iledere.com/pratique">Île de Ré</a></h3>
               <img class="featured" src="images/tourisme_ile_de_re.jpg"/>
               <span class="distance">(voiture: 1h10 de Niort)</span>
               <p class="first-line-description">Si vous avez prévu de passer quelques jours dans la région, passez une nuit ou deux dans l'Île de Ré peut vous dépayser. Avec ses plages, ses petits villages, ses marchés bucoliques et les balades à vélo légendaires, l'Île de Ré est une destination unique pour passer un bon moment entre amis ou en famille.</p>
             </div>
             <div class="col-md-3 visit-place">
-              <h3><a href="https://www.puydufou.com">Puy du Fou</a></h3>
+              <h3><a target="_blank" href="https://www.puydufou.com">Puy du Fou</a></h3>
               <img class="featured" src="images/tourisme_puy_du_fou.jpg"/>
               <span class="distance">(voiture: 1h20 de Niort)</span>
               <p class="first-line-description">Élu meilleur parc du monde, le Puy du Fou est à ne pas manquer. Faites le détour pour y passer un ou deux jours et pourquoi pas rester dans leurs hôtels exceptionnels. La Cinéscénie du soir peut être prise en même temps que le parc, mais il faut réserver longtemps à l'avance; c'est un des plus beaux spectacles que vous verrez dans votre vie, inoubliable !</p>
             </div>
             <div class="col-md-3 visit-place">
-              <h3><a href="https://futuroscope.com/">Futuroscope</a></h3>
+              <h3><a target="_blank" href="https://futuroscope.com/">Futuroscope</a></h3>
               <img class="featured" src="images/tourisme_futuroscope.jpg"/>
               <span class="distance">(voiture: 1h de Niort)</span>
               <p class="first-line-description">Des attractions à couper le souffle, un parc agréable pour les petits et grands, le Futuroscope est unique en son genre. Le parc se renouvelle sans cesse pour impressionner les visiteurs avec les dernières technologies. Il vaut le détour ! N'oubliez pas de rester le soir pour le spectacle de son et lumière (inclus dans le prix du billet).</p>
             </div>
             <div class="col-md-3 visit-place">
-              <h3><a href="https://www.marais-poitevin.com/">Le marais poitevin</a></h3>
+              <h3><a target="_blank" href="https://www.marais-poitevin.com/">Le marais poitevin</a></h3>
               <img class="featured" src="images/tourisme_marais_poitevin.jpg"/>
               <span class="distance">(voiture: 1h de Niort)</span>
               <p class="first-line-description">Pour passer un moment agréable entre amis ou en famille, loin des villes, le marais poitevin est un endroit idéal. Prenez une excursion en canoë, allez vous baigner dans un lac, ou faites des balades à vélo ou encore des visites de châteaux médiévaux. Il y en a pour tous les goûts !</p>
             </div>
             <div class="col-md-3 visit-place">
-              <h3><a href="http://poitiers-tourism.com/">Poitiers</a></h3>
+              <h3><a target="_blank" href="http://poitiers-tourism.com/">Poitiers</a></h3>
               <img class="featured" src="images/tourisme_poitiers.jpg"/>
               <span class="distance">(voiture:1h de Niort)</span>
               <p class="first-line-description">Pour les amoureux de la ville, vous pouvez faire une halte au centre historique de Poitiers, le chef lieu de la région Poitou-Charentes. Séjournez dans cette ville et découvrez les produits régionaux, comme les terrines et pâtés ou encore les bières locales.</p>
             </div>
             <div class="col-md-3 visit-place">
-              <h3><a href="http://www.zoo-palmyre.fr/">Zoo de la Palmyre</a></h3>
+              <h3><a target="_blank" href="http://www.zoo-palmyre.fr/">Zoo de la Palmyre</a></h3>
               <img class="featured" src="images/tourisme_zoo_palmyre.jpg"/>
               <span class="distance">(voiture: 1h30 min de Niort)</span>
               <p class="first-line-description">Pour passer une journée insolite en famille, allez visiter le Zoo de la Palmyre. Ne manquez pas le spectacle des otaries ainsi que les perroquets en trottinette. Vous ne verrez pas ça deux fois dans votre vie !</p>
