Update timeline with real text/images

--- a/index.html
+++ b/index.html
@@ -155,62 +155,65 @@
     <h1 class="h1 text-center pb-3 ww-title">Notre histoire</h1>
     <ul class="timeline animate-box">
       <li class="animate-box">
-        <div class="timeline-badge" style="background-image:url(images/gallery-pic-1.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/timeline_rencontre_crop.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h3 class="timeline-title">Nos débuts</h3>
+            <h3 class="timeline-title">Un deux, trois et quatre, cinq et six...</h3>
             <span class="date">15 Mars 2013</span>
           </div>
           <div class="timeline-body">
-            <p>La rencontre...</p>
+            <p>L'étudiante qui tombe sous le charme de son professeur de danse... très original ! Mais le professeur de danse qui demande à l'étudiante de devenir professeur à son tour, c'est plus rare.
+            </p>
           </div>
         </div>
       </li>
       <li class="timeline-inverted animate-box">
-        <div class="timeline-badge" style="background-image:url(images/gallery-pic-2.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/timeline_emmenagement_crop.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h3 class="timeline-title">Emménagement</h3>
+            <h3 class="timeline-title">Une vie sous le même toît</h3>
             <span class="date">5 Décembre 2013</span>
           </div>
           <div class="timeline-body">
-            <p>Nos premiers pas de vie à deux.</p>
+            <p>Début de la vie à deux, en plein centre ville de Toulouse avec ses hauts (tout à proximité) et ses bas (à proximité de tout et surtout des gens bourrés la nuit qui crient dans la rue!).
+            </p>
           </div>
         </div>
       </li>
       <li class="animate-box">
-        <div class="timeline-badge" style="background-image:url(images/gallery-pic-3.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/timeline_arrivee_londres_crop.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h3 class="timeline-title">Départ pour notre vie en Angleterre</h3>
+            <h3 class="timeline-title">Home sweet home</h3>
             <span class="date">5 Octobre 2014</span>
           </div>
           <div class="timeline-body">
-            <p>Le départ chez nos voisins anglais. De nouvelles carrières professionnelles se dessinent.</p>
+            <p>Après un début rock'n'roll à Londres, nous progressons vers de nouvelles carrières professionnelles et apprenons à maîtriser la langue anglaise tout en gardant notre cher accent bien français (c'est volontaire, obviously!).
+            </p>
           </div>
         </div>
       </li>
       <li class="timeline-inverted animate-box">
-        <div class="timeline-badge" style="background-image:url(images/gallery-pic-4.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/timeline_demande_mariage_crop.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h3 class="timeline-title">Demande en mariage</h3>
+            <h3 class="timeline-title">Une délicieuse viennoiserie</h3>
             <span class="date">14 Octobre 2017</span>
           </div>
           <div class="timeline-body">
-            <p>Lors d'un week-end d'exception à Vienne, elle dit "oui".</p>
+            <p>Il se jette à l'eau, Romain organise un merveilleux weekend à Vienne en amoureux et embarque avec lui une surprise de taille: une bague de fiançaille ! Difficile de dire non...</p>
           </div>
         </div>
       </li>
       <li class="animate-box">
-        <div class="timeline-badge" style="background-image:url(images/gallery-pic-5.jpg);"></div>
+        <div class="timeline-badge" style="background-image:url(images/timeline_alice_crop.jpg);"></div>
         <div class="timeline-panel">
           <div class="timeline-heading">
-            <h3 class="timeline-title">Arrivée d'Alice</h3>
+            <h3 class="timeline-title">Notre plus belle aventure</h3>
             <span class="date">17 Décembre 2018</span>
           </div>
           <div class="timeline-body">
-            <p>Après un accouchement riche en emotion, notre famille s'agrandit avec l'arrivée d'Alice.</p>
+            <p>Devenir parents de notre petite Alice ! Une aventure que nous sommes impatients de partager en famille, pour le meilleur… et pour le pire &#x1F601;!</p>
           </div>
         </div>
       </li>
