--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
         <h1 class="h1 ww-title">Aurélie</h3>
         <div class="mt-3"><img class="img-fluid featured" src="images/aurelie_main.jpg" alt="Bride"/>
           <p class="pt-3">
-            L'aventurière du couple, Aurélie adore faire des rencontre insolites, que ce soit au milieu de la mangrove Thaïlandaise (rend moi mon appareil photo !), en haut des falaises de Moher (j'ai le vertige, je veux partir d'ici...) ou dans son appartement Londonien (une araignéeeeeee !!!!!).</p>
+            L'aventurière du couple, Aurélie adore faire des rencontre insolites, que ce soit au milieu de la mangrove Thaïlandaise (rends moi mon appareil photo !), en haut des falaises de Moher (j'ai le vertige, je veux partir d'ici...) ou dans son appartement Londonien (une araignéeeeeee !!!!!).</p>
           <p>
               Sa plus belle rencontre insolite arriva il y a quelques années, quand elle tomba sous le charme de ce talentueux danseur, grand, beau, ténébreux (qu'est-ce qu'il ne faut pas dire pour lui faire plaisir) et surtout très drôle.
-              Après quelques mois rock'n'roll, les amoureux se lancent dans leur propre danse à deux, et d'aventure en aventure, arrivent à Londres pour faire d'autres rencontres encore plus insolites: les scones, le criquet et les écureuils.</p>
+              Après quelques mois rock'n'roll, les amoureux se lancent dans leur propre danse à deux, et d'aventures en aventures, arrivent à Londres pour faire d'autres rencontres encore plus insolites: les scones, le criquet et les écureuils.</p>
           <p>Aurélie ne sait pas rester en place plus de quelques mois; 'et si on changeait d'appart ?', 'et si on partait en vacances à Istanbul ?', 'et si je quittais l'académie ?', 'ça te dit de tout quitter et de partir en Australie, au Canada, à Barcelone, en Suisse ?', 'et si on faisait le tour du monde en un an?', 'je vais me mettre au crochet, ça serait super que je sache faire quelque chose de créatif'.</p>
           <p>C'est en voyant l'attitude réconfortante et encourageante de Romain à chaque nouvelle idée, et en ignorant volontairement ses yeux apeurés, qu'Aurélie sû qu'elle ne pouvait plus se passer de lui. Alors, elle n'hésita pas à dire oui, en cette soirée romantique du 14 Octobre 2018, à Vienne...</p>
         </div>
@@ -84,14 +84,14 @@
               inoubliables ces cinq dernières années auprès de sa dulcinée.</p>
             <p>
               Il a quitté la France, pays du soleil, des coeurs de canards, du pâté de papa, et des tripoux, pour vivre
-              dans un environnement hostile, entouré de pintes de bière, ravagé par la pluie en continue et déprimé par le manque de vitamine D.
+              dans un environnement hostile, entouré de pintes de bière, ravagé par la pluie en continu et déprimé par le manque de vitamine D.
             </p>
             <p>
-              Malgré toutes ces difficultés, il a réussit à s'adapter à la vie Londonienne et peut maintenant boire deux pintes de Guinness dans la même soirée
+              Malgré toutes ces difficultés, il a réussi à s'adapter à la vie Londonienne et peut maintenant boire deux pintes de Guinness dans la même soirée
               sans être trop atteint (la troisième reste un véritable challenge…). Il a maintenant pris goût à l'aventure et n'hésite pas à découvrir de nouvelles contrées (le centre de Londres), des saveurs locales (le cheddar anglais), et à parler une langue étrangère tout en gardant son accent du sud (ce n'est pas donné à tout le monde!).
             </p>
             <p>
-              Après avoir vécu tous ces moments de bonheurs et d'escapades insolites, Romain a su rapidement qu'il ne pouvait plus vivre sans entendre le rire d'Aurélie, sans la regarder tous les jours que Dieu fait, et sans la tenir contre lui. Ainsi, le 14 octobre 2018, il se jette à l'eau et organise un weekend en amoureux à Vienne pour faire sa demande...
+              Après avoir vécu tous ces moments de bonheurs et d'escapades insolites, Romain a su rapidement qu'il ne pouvait plus vivre sans entendre le rire d'Aurélie, sans la regarder tous les jours que Dieu fait, et sans la tenir contre lui. Ainsi, le 14 octobre 2017, il se jette à l'eau et organise un weekend en amoureux à Vienne pour faire sa demande...
             </p>
           </div>
         </div>
@@ -225,7 +225,7 @@
     <h1 class="h1 text-center pt-3 pb-3 ww-title">Nos témoins</h2>
     <div class="row principal">
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_charlotte_crop.jpg" alt="Groom Men 1"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_charlotte_crop.jpg" alt="Charlotte"/>
           <div class="card-body text-center">
             <div class="h5">Charlotte Fieno</div>
             <p class="text-muted">Témoin de la mariée</p>
@@ -233,7 +233,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_oriane_crop.jpg" alt="Groom Men 2"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_oriane_crop.jpg" alt="Oriane"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Oriane Escobar</div>
             <p class="text-muted">Témoin de la mariée</p>
@@ -241,7 +241,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_jeremie_crop.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_jeremie_crop.jpg" alt="Jeremie"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Jérémie Pardou</div>
             <p class="text-muted">Témoin du marié</p>
@@ -249,7 +249,7 @@
         </div>
       </div>
       <div class="col-md-3">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_guitou_crop.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/temoin_guitou_crop.jpg" alt="Guillaume"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Guillaume Truilhé</div>
             <p class="text-muted">Témoin du marié</p>
@@ -260,7 +260,7 @@
     <h1 class="h1 text-center pt-3 pb-3 ww-title">Les demoiselles d'honneur</h2>
     <div class="row secondary">
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_pauline_crop.jpg" alt="Groom Men 1"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_pauline_crop.jpg" alt="Pauline"/>
           <div class="card-body text-center">
             <div class="h5">Pauline Millet-Peyrat</div>
             <p class="text-muted">Soeur de la mariée</p>
@@ -268,7 +268,7 @@
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_emeline_crop.jpg" alt="Groom Men 2"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_emeline_crop.jpg" alt="Emeline"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Emeline Aupy</div>
             <p class="text-muted">Soeur de la mariée</p>
@@ -276,7 +276,7 @@
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_chloe_crop.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_chloe_crop.jpg" alt="Chloe"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Chloé Nunez</div>
             <p class="text-muted">Amie de la mariée</p>
@@ -284,7 +284,7 @@
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_virginie_crop.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_virginie_crop.jpg" alt="Virginie"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Virginie Travisan</div>
             <p class="text-muted">Amie du marié</p>
@@ -292,15 +292,15 @@
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_coco_crop.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_coco_crop.jpg" alt="Coralie"/>
           <div class="card-body text-center">
-            <div class="h5 text-center">Coralie Truilhé</div>
+            <div class="h5 text-center">Coralie BomBail</div>
             <p class="text-muted">Amie du marié</p>
           </div>
         </div>
       </div>
       <div class="col-md-2">
-        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_alice_crop.jpg" alt="Groom Men 3"/>
+        <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_alice_crop.jpg" alt="Alice"/>
           <div class="card-body text-center">
             <div class="h5 text-center">Alice Garrigues</div>
             <p class="text-muted">Fille des mariés</p>
@@ -335,19 +335,19 @@
                 <img src="images/icon_train.png"/>
               </div>
               <p>De La Rochelle: 
-                Prendre un train direct de La Rochelle à Niort (environ 40 min)
+                prendre un train direct de La Rochelle à Niort (environ 40 min)
               </p>
               <p>
                 De Paris: 
-                Prendre un train direct de Gare Montparnasse Paris à Niort (environ 2h)
+                prendre un train direct de Gare Montparnasse Paris à Niort (environ 2h)
               </p>
               <p>
                 De Poitiers: 
-                Prendre un train direct de Poitiers à Niort (environ 50 min)
+                prendre un train direct de Poitiers à Niort (environ 50 min)
               </p>
               <p>
                 De Bordeaux:
-                Prendre un train de Bordeaux à Niort (environ 2h40) - un changement obligatoire à Poitiers
+                prendre un train de Bordeaux à Niort (environ 2h40) - un changement obligatoire à Poitiers
               </p>
             </div>
             <div class="col-md-4">
@@ -371,7 +371,7 @@
                 </p>
                 <p>
                   De Niort: 
-                  <a target="_blank" href="https://www.rentalcars.com/fr/3">Rentalcars.com</a>
+                  <a target="_blank" href="https://www.rentalcars.com/fr/3">Rentalcars.com</a>,
                   <a target="_blank" href="https://www.europcar-atlantique.fr/agences/niort">Europcar</a>
                 </p>
               </p>   
@@ -391,6 +391,9 @@
                 <li><a target="_blank" href="http://www.gite-les-frenes.com/">Gîte les Frênes</a></li>
                 <li><a target="_blank" href="https://www.booking.com/hotel/fr/gite-sud-deux-sevres.en-gb.html">Gîte Sud Deux Sèvres</a></li>
               </ul>
+              <p>Une liste plus complète est
+                <a target="_blank" href="https://docs.google.com/spreadsheets/d/1IolMKUqk2gYhX6420WTmI_GCrAimdaKQWOVX-cyKnmM/">à votre disposition</a>.
+              </p>
             </div>
             <div class="col-md-4">
                 <h2>Airbnb</h2>
@@ -494,7 +497,7 @@
               </div>
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="guest-input">Nombre d'enfants (< 18 ans) et âge*</label>
+                  <label for="guest-input">Nombre d'enfants (< 18 ans) et âge (à la date du mariage)*</label>
                   <input class="form-control" id="name-input" type="text" name="kid-info" required="required" placeholder="Example: 2 (6 et 8 ans)"/>
                 </div>
               </div>
@@ -576,6 +579,13 @@
           // Get all the forms elements and their values in one step
           var values = $(this).serializeArray();
           rsvpApiCall(values, successFn, errorFn);
+        });
+
+        // Quick fix to collapse the sandwitch menu on mobile when a
+        // menu link is clicked to not disturb the user navigation
+        $('a.nav-link').click(function(e) {
+          $('button.navbar-toggler').addClass('collapsed');
+          $('#ww-navbarNav').removeClass('show');
         });
       });
     </script>
