Fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@
       <div class="col-md-2">
         <div class="card d-block mb-3"><img class="card-img-top" src="images/dem_honneur_coco_crop.jpg" alt="Coralie"/>
           <div class="card-body text-center">
-            <div class="h5 text-center">Coralie BomBail</div>
+            <div class="h5 text-center">Coralie Bombail</div>
             <p class="text-muted">Amie du marié</p>
           </div>
         </div>
