Add red color to labels

--- a/index.html
+++ b/index.html
@@ -477,13 +477,13 @@
             <div class="row">
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="name-input">Nom*</label>
+                  <label for="name-input" class="required-field">Nom</label>
                   <input class="form-control" id="name-input" type="text" name="name" required="required"/>
                 </div>
               </div>
               <div class="col-md-6 pb-3">
                 <div class="form-group">
-                  <label for="email-input">Email*</label>
+                  <label for="email-input" class="required-field">Email</label>
                   <input class="form-control" id="email-input" type="email" name="email" required="required"/>
                 </div>
               </div>
@@ -491,13 +491,13 @@
             <div class="row">
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="guest-input">Nombre d'adultes*</label>
+                  <label for="guest-input" class="required-field">Nombre d'adultes</label>
                   <input class="form-control" id="name-input" type="text" name="adult-info" required="required"/>
                 </div>
               </div>
               <div class="col md-6 pb-3">
                 <div class="form-group">
-                  <label for="guest-input">Nombre d'enfants (< 18 ans) et âge (à la date du mariage)*</label>
+                  <label for="guest-input" class="required-field">Nombre d'enfants (< 18 ans) et âge (à la date du mariage)</label>
                   <input class="form-control" id="name-input" type="text" name="kid-info" required="required" placeholder="Example: 2 (6 et 8 ans)"/>
                 </div>
               </div>
