Fix spelling mistake on exemple (example in english)

--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@
               <div class="col md-6 pb-3">
                 <div class="form-group">
                   <label for="guest-input" class="required-field">Nombre d'enfants (< 18 ans) et âge (à la date du mariage)</label>
-                  <input class="form-control" id="name-input" type="text" name="kid-info" required="required" placeholder="Example: 2 (6 et 8 ans)"/>
+                  <input class="form-control" id="name-input" type="text" name="kid-info" required="required" placeholder="Exemple: 2 (6 et 8 ans)"/>
                 </div>
               </div>
             </div>
