Spelling mistakes on months

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
               Sa plus belle rencontre insolite arriva il y a quelques années, quand elle tomba sous le charme de ce talentueux danseur, grand, beau, ténébreux (qu'est-ce qu'il ne faut pas dire pour lui faire plaisir) et surtout très drôle.
               Après quelques mois rock'n'roll, les amoureux se lancent dans leur propre danse à deux, et d'aventures en aventures, arrivent à Londres pour faire d'autres rencontres encore plus insolites: les scones, le criquet et les écureuils.</p>
           <p>Aurélie ne sait pas rester en place plus de quelques mois; 'et si on changeait d'appart ?', 'et si on partait en vacances à Istanbul ?', 'et si je quittais l'académie ?', 'ça te dit de tout quitter et de partir en Australie, au Canada, à Barcelone, en Suisse ?', 'et si on faisait le tour du monde en un an?', 'je vais me mettre au crochet, ça serait super que je sache faire quelque chose de créatif'.</p>
-          <p>C'est en voyant l'attitude réconfortante et encourageante de Romain à chaque nouvelle idée, et en ignorant volontairement ses yeux apeurés, qu'Aurélie sû qu'elle ne pouvait plus se passer de lui. Alors, elle n'hésita pas à dire oui, en cette soirée romantique du 14 Octobre 2018, à Vienne...</p>
+          <p>C'est en voyant l'attitude réconfortante et encourageante de Romain à chaque nouvelle idée, et en ignorant volontairement ses yeux apeurés, qu'Aurélie sû qu'elle ne pouvait plus se passer de lui. Alors, elle n'hésita pas à dire oui, en cette soirée romantique du 14 octobre 2017, à Vienne...</p>
         </div>
       </div>
       <div class="col-md-6">
@@ -159,7 +159,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Un deux, trois et quatre, cinq et six...</h3>
-            <span class="date">15 Mars 2013</span>
+            <span class="date">15 mars 2013</span>
           </div>
           <div class="timeline-body">
             <p>L'étudiante qui tombe sous le charme de son professeur de danse... très original ! Mais le professeur de danse qui demande à l'étudiante de devenir professeur à son tour, c'est plus rare.
@@ -172,12 +172,12 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Une vie sous le même toît</h3>
-            <span class="date">5 Décembre 2013</span>
+            <span class="date">5 décembre 2013</span>
           </div>
           <div class="timeline-body">
             <p>Début de la vie à deux, en plein centre ville de Toulouse avec ses hauts (tout à proximité) et ses bas (à proximité de tout et surtout des gens bourrés la nuit qui crient dans la rue!).
             </p>
-          </div>
+         </div>
         </div>
       </li>
       <li class="animate-box">
@@ -185,7 +185,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Home sweet home</h3>
-            <span class="date">5 Octobre 2014</span>
+            <span class="date">5 octobre 2014</span>
           </div>
           <div class="timeline-body">
             <p>Après un début rock'n'roll à Londres, nous progressons vers de nouvelles carrières professionnelles et apprenons à maîtriser la langue anglaise tout en gardant notre cher accent bien français (c'est volontaire, obviously!).
@@ -198,7 +198,7 @@
         <div class="timeline-panel">
           <div class="timeline-heading">
             <h3 class="timeline-title">Une délicieuse viennoiserie</h3>
-            <span class="date">14 Octobre 2017</span>
+            <span class="date">14 octobre 2017</span>
           </div>
           <div class="timeline-body">
             <p>Il se jette à l'eau, Romain organise un merveilleux weekend à Vienne en amoureux et embarque avec lui une surprise de taille: une bague de fiançaille ! Difficile de dire non...</p>
