Fix spelling mistake

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         <h1 class="h1 ww-title">Aurélie</h3>
         <div class="mt-3"><img class="img-fluid featured" src="images/aurelie_main.jpg" alt="Bride"/>
           <p class="pt-3">
-            L'aventurière du couple, Aurélie adore faire des rencontre insolites, que ce soit au milieu de la mangrove Thaïlandaise (rends moi mon appareil photo !), en haut des falaises de Moher (j'ai le vertige, je veux partir d'ici...) ou dans son appartement Londonien (une araignéeeeeee !!!!!).</p>
+            L'aventurière du couple, Aurélie adore faire des rencontres insolites, que ce soit au milieu de la mangrove Thaïlandaise (rends-moi mon appareil photo !), en haut des falaises de Moher (j'ai le vertige, je veux partir d'ici...) ou dans son appartement Londonien (une araignéeeeeee !!!!!).</p>
           <p>
               Sa plus belle rencontre insolite arriva il y a quelques années, quand elle tomba sous le charme de ce talentueux danseur, grand, beau, ténébreux (qu'est-ce qu'il ne faut pas dire pour lui faire plaisir) et surtout très drôle.
               Après quelques mois rock'n'roll, les amoureux se lancent dans leur propre danse à deux, et d'aventures en aventures, arrivent à Londres pour faire d'autres rencontres encore plus insolites: les scones, le criquet et les écureuils.</p>
