--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <div class="h4">Cérémonie civile</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt"></i><a target="_blank" href="https://www.google.com/maps/place/City+Hall/@46.3238382,-0.4648161,15z/data=!4m5!3m4!1s0x0:0x3d25479ae0e8605a!8m2!3d46.3238382!4d-0.4648161" target="_blank"><span class="pl-2 text-muted">Mairie de Niort, 1 Place Martin Bastard, 79000 Niort, France</span></a></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">27 juillet 2019, 14h</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt"></i><span class="pl-2 text-muted">27 juillet 2019, 14h00</span></li>
           </ul>
           <p>La cérémonie civile se déroulera à la mairie de Niort suivie d'une courte séance photo devant la mairie, les Halles et le Donjon de Niort.
           </p>
@@ -123,7 +123,7 @@
           <div class="h4">Cérémonie laïque, vin d'honneur et dîner</div>
           <ul>
             <li><i class="text-muted fas fa-map-marker-alt "></i><a target="_blank" href="https://www.google.com/maps/place/La+Gravette,+79360+Beauvoir-sur-Niort,+France/@46.2013597,-0.4874936,17z/data=!3m1!4b1!4m5!3m4!1s0x4800d2b6dc335333:0x338e629cf0bc74fc!8m2!3d46.2013597!4d-0.4852996" target="_blank"><span class="pl-2 text-muted">Domaine de la Gravette, 79360 Beauvoir-sur-Niort, France</span></a></li>
-            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">27 juillet 2019, 16h</span></li>
+            <li class="pt-2"><i class="text-muted far fa-calendar-alt "></i><span class="pl-2 text-muted">27 juillet 2019, 16h00</span></li>
           </ul>
           <p>Une cérémonie laïque se déroulera au domaine de La Gravette suivie du vin d'honneur, du dîner et de la soirée sur le dancefloor!
           </p>
