Add new section about the wedding list

--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#timeline">Notre histoire</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#people">Nos témoins</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#tourism-details">Infos pratiques</a></li>
+          <li class="nav-item"><a class="nav-link smooth-scroll" href="#gifts">Liste</a></li>
           <li class="nav-item"><a class="nav-link smooth-scroll" href="#rsvp">RSVP</a></li>
         </ul>
       </div>
@@ -459,6 +460,32 @@
               <img class="featured" src="images/tourisme_zoo_palmyre.jpg"/>
               <span class="distance">(voiture: 1h30 min de Niort)</span>
               <p class="first-line-description">Pour passer une journée insolite en famille, allez visiter le Zoo de la Palmyre. Ne manquez pas le spectacle des otaries ainsi que les perroquets en trottinette. Vous ne verrez pas ça deux fois dans votre vie !</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+<div class="ww-section bg-blue" id="gifts">
+  <div class="ww-gifts">
+    <div class="container">
+      <h1 class="h1 text-center pb-3 ww-title">Liste de mariage</h1>
+        <div class="row how-to-come">
+          <div class="col-md-4 text-center">
+            <div class="gift-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 20 25" enable-background="new 0 0 20 20" xml:space="preserve"><g><path fill="white" d="M19,5h-2.8C16.7,4.5,17,3.8,17,3c0-1.7-1.3-3-3-3c-1,0-2.8,0.9-4,2.1C8.8,0.9,7,0,6,0C4.3,0,3,1.3,3,3   c0,0.8,0.3,1.5,0.8,2H1C0.4,5,0,5.4,0,6v2.8C0,8.9,0.1,9,0.2,9h8.4C8.8,9,9,8.8,9,8.6V5.4C9,5.2,9.2,5,9.4,5h1.2   C10.8,5,11,5.2,11,5.4v3.2C11,8.8,11.2,9,11.4,9h8.4C19.9,9,20,8.9,20,8.8V6C20,5.4,19.6,5,19,5z M6,4C5.4,4,5,3.6,5,3   c0-0.6,0.4-1,1-1c0.6,0,2.4,1.2,2.9,1.8C8.6,3.9,6,4,6,4z M14,4c0,0-2.6-0.1-2.9-0.2C11.7,3.1,13.4,2,14,2c0.6,0,1,0.4,1,1   C15,3.6,14.6,4,14,4z"/><path fill="white" d="M8.6,11H1.2C1.1,11,1,11.1,1,11.2V19c0,0.6,0.4,1,1,1h6.6C8.8,20,9,19.8,9,19.6v-8.2C9,11.2,8.8,11,8.6,11z   "/><path fill="white" d="M18.8,11h-7.4c-0.2,0-0.4,0.2-0.4,0.4v8.2c0,0.2,0.2,0.4,0.4,0.4H18c0.6,0,1-0.4,1-1v-7.8   C19,11.1,18.9,11,18.8,11z"/></g><text x="0" y="35" fill="white" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by ProSymbols</text><text x="0" y="40" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text></svg>
+            </div>
+          </div>
+          <div class="col-md-4">
+            <div class="gift-description">
+              <p>Cet evenement va etre unique pour nous uniquement par votre presence a tous.</p>
+              <p>Si toutefois vous souhaitez participer encore plus a notre bonheur, nous avons mis en place une cagnotte online sur <a href="https://www.lepotcommun.fr/pot/dnolyvwt" target="_blank">lepotcommun.fr</a>.</p>
+              <p>Une urne sera aussi disponible lors du mariage pour que vous puissiez ecouler vos louis d'or, anciens francs et autres doublons.</p>
+            </div>
+          </div>
+          <div class="col-md-4 text-center">
+            <div class="gift-icon">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" version="1.1" x="0px" y="0px" viewBox="0 0 20 25" enable-background="new 0 0 20 20" xml:space="preserve"><g><path fill="white" d="M19,5h-2.8C16.7,4.5,17,3.8,17,3c0-1.7-1.3-3-3-3c-1,0-2.8,0.9-4,2.1C8.8,0.9,7,0,6,0C4.3,0,3,1.3,3,3   c0,0.8,0.3,1.5,0.8,2H1C0.4,5,0,5.4,0,6v2.8C0,8.9,0.1,9,0.2,9h8.4C8.8,9,9,8.8,9,8.6V5.4C9,5.2,9.2,5,9.4,5h1.2   C10.8,5,11,5.2,11,5.4v3.2C11,8.8,11.2,9,11.4,9h8.4C19.9,9,20,8.9,20,8.8V6C20,5.4,19.6,5,19,5z M6,4C5.4,4,5,3.6,5,3   c0-0.6,0.4-1,1-1c0.6,0,2.4,1.2,2.9,1.8C8.6,3.9,6,4,6,4z M14,4c0,0-2.6-0.1-2.9-0.2C11.7,3.1,13.4,2,14,2c0.6,0,1,0.4,1,1   C15,3.6,14.6,4,14,4z"/><path fill="white" d="M8.6,11H1.2C1.1,11,1,11.1,1,11.2V19c0,0.6,0.4,1,1,1h6.6C8.8,20,9,19.8,9,19.6v-8.2C9,11.2,8.8,11,8.6,11z   "/><path fill="white" d="M18.8,11h-7.4c-0.2,0-0.4,0.2-0.4,0.4v8.2c0,0.2,0.2,0.4,0.4,0.4H18c0.6,0,1-0.4,1-1v-7.8   C19,11.1,18.9,11,18.8,11z"/></g><text x="0" y="35" fill="white" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">Created by ProSymbols</text><text x="0" y="40" fill="#000000" font-size="5px" font-weight="bold" font-family="'Helvetica Neue', Helvetica, Arial-Unicode, Arial, Sans-serif">from the Noun Project</text></svg>
             </div>
           </div>
         </div>
