Now using wedding list concept from lepotcommun.fr instead of the pot concept (the UI is way better on lists)

--- a/index.html
+++ b/index.html
@@ -482,7 +482,7 @@
               <p>Nous ne savons pas encore quelle destination choisir mais ça sera sûrement un endroit où l'on peut s'évader, faire des randonnées, nager, bronzer, visiter, ou simplement se reposer. Nous allons sûrement faire ce grand voyage en 2020, avec notre petit trésor Alice ; il n'y a pas de raison qu'elle ne profite pas elle aussi de la plage et des cocktails… avec modération bien sûr !</p>
               <p>Nous vous remercions par avance et nous avons hâte de vous voir le jour de notre mariage !</p>
               <div class="text-center">
-                <a href="https://www.lepotcommun.fr/pot/dnolyvwt" class="btn btn-primary" target="_blank">Pot commun</a>
+                <a href="https://www.lepotcommun.fr/les-petites-listes/aurelie-et-romain" class="btn btn-primary" target="_blank">Pot commun</a>
               </div>
             </div>
           </div>
